--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: Forty
 subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
+email: sameerthakuri912@icloud.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: https://sameer912.github.io/ # the base hostname & protocol for your site
